--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=springmaven
-spring.datasource.url=jdbc:h2:mem:testdb
 
+spring.datasource.url=jdbc:mysql://localhost:3306/sellit
+spring.datasource.username=root
+spring.datasource.password=6625195
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Hibernate config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
