--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Hibernate config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.org.hibernate=DEBUG
